--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
 				</summary>
 				<ul>
 					<li>Forbes 30 Under 30 Class of 2023</li>
+					<li>SolarQuarter 40 Under 40 Class of 2023</li>
 					<li>National Science Foundation Innovation Corps Teams Grant (2020)</li>
 					<li>National Science Foundation Innovation Corps Fusion Grant (2019)</li>
 					<li>First Place at the MIT Mechanical Engineering Research Exhibition (2019)</li>
