--- a/guide-to-kenya.html
+++ b/guide-to-kenya.html
@@ -125,7 +125,7 @@
 
 			<p>Don't discount outdoor markets if you're close enough to one. I have a small one near my neighborhood that's great for some fruits and veggies.</p>
 
-			<p>As a cuisine, Kenyan food is limited but delicious. Most meals consist of a carbohydrate like ugali, a thick maize porridge used as an edible utensil; a vegetable like sukuma wiki, related to collard greens; and a protein like beans or nyama choma, barbecued meat. Seasonings are mild and are used to highlight the inherent flavor of the meat or vegetables. It is difficult, but not impossible, to be vegetarian, thanks in part to the plethora of Indian restaurants.</p>
+			<p>As a cuisine, Kenyan food is limited but delicious. Most meals consist of a carbohydrate like ugali, a thick maize porridge used as an edible utensil; a vegetable like sukuma wiki, related to collard greens; and a protein like beans or nyama choma, barbecued meat. Seasonings are mild and are used to highlight the inherent flavor of the meat or vegetables. It is difficult, but not impossible, to be vegetarian. There are many Indian restaurants.</p>
 
 			<p>Nairobi has a ton of good restaurants. Here is an incomplete list of my favorites:</p>
 			<ul>
@@ -326,7 +326,7 @@
 			<h3>Local Currency</h3>
 			<p>Kenya's currency is the shilling, abbreviated KES or KSH, a holdover from British colonial days. At the time of writing, the exchange rate is about 135 KES/USD, meaning about 75% of the price in shillings is the price in U.S. cents. That said, the value of the shilling relative to the dollar has been falling quickly over the past few years, so check online for <a rel="external" target="_blank" href="https://www.xe.com/currencyconverter/convert/?Amount=1&From=USD&To=KES">the current exchange rate</a>.</p>
 
-			<p>You do not need to worry about currency black markets in Kenya; the central bank does not peg the value of the shilling to any other currency. In Kenya, the best exchange rates you'll find are in forex counters in malls, and they won't be much better than those at the airport. This will not always be the case for other countries in Africa, so be sure to research central bank and parallel market exchange rates before traveling outside of Kenya. For more information, read up on the <a rel="external" target="_blank" href="https://en.wikipedia.org/wiki/Impossible_trinity">Impossible trinity</a>.</p>
+			<p>You do not need to worry about currency black markets in Kenya; the central bank does not peg the value of the shilling to any other currency. In Kenya, the best exchange rates you'll find are in forex counters in malls, and they won't be much better than those at the airport. This will not always be the case for other countries in Africa, so be sure to research central bank and parallel market exchange rates before traveling outside of Kenya. For more information, read up on the <a rel="external" target="_blank" href="https://en.wikipedia.org/wiki/Impossible_trinity">impossible trinity</a>.</p>
 
 			<h3>How to Pay: Cash, Credit, and Mobile Money</h3>
 			<p>In Kenya, you can usually pay with a credit card as long as you're in a nice store, but cash and mobile money are more widely accepted.</p>
@@ -401,10 +401,10 @@
 			<h3>Between Cities</h3>
 			<p>Moving between cities and regions:</p>
 			<ul>
-				<li>Kenya has a few <b>domestic airlines</b> which are generally safe and cheap. For example, living in Nairobi, you can get to the coast in 45 minutes for around $60. These airlines include Skyward, Jambojet, and Kenya Airways (also international). There are two airports in Nairobi, both of which do some domestic and some international, but in general <b>Jomo Kenyatta International Airport</b> is for international flights and fewer domestic flights, while <b>Wilson Airport</b> is for domestic flights. Wilson is much closer to town, and security and check-in there are less of an ordeal, so if you're flying to the coast and choosing between similarly priced flights at these two airports, choose Wilson and enjoy your life.</li>
+				<li>Kenya has a few <b>domestic airlines</b> which are generally safe and cheap. For example, living in Nairobi, you can get to the coast in 45 minutes for around $60. These airlines include Skyward, Jambojet, and Kenya Airways (also international). There are two airports in Nairobi, both of which do some domestic and some international, but in general <b>Jomo Kenyatta International Airport</b> is for international flights, and <b>Wilson Airport</b> is for domestic flights. Wilson is much closer to town, and security and check-in there are less of an ordeal, so if you're flying to the coast and choosing between similarly priced flights at these two airports, choose Wilson and enjoy your life.</li>
 				<li><b>Matatus</b> also go between towns and are generally the cheapest option. I sometimes ride these between towns.</li>
 				<li><b>Larger buses</b> are a nice compromise sometimes. You can sit more comfortably and often go more directly for only a little bit more money.</li>
-				<li><b>Kenya Railways</b> is underrated. I use it to go back and forth to the coast. It's about $8 each way, but most folks don't like it because it's about the same speed as Amtrak and takes a few hours. That said, you'll likely see giraffes, elephants, and other cool creatures out the window along the way.</li>
+				<li><b>Kenya Railways</b> is underrated. I use it to go back and forth to the coast. It's about $8 each way, but most folks don't like it because it's about the same speed as Amtrak and takes a few hours. That said, you'll likely see giraffes, impalas, and other cool creatures out the window along the way.</li>
 			</ul>
 
 			<h3>Jomo Kenyatta International Airport (NBO)</h3>
