Update blog text

--- a/blog.html
+++ b/blog.html
@@ -44,7 +44,7 @@
 				<img src="blog/kenya.jpg" alt="My friends and I feeding a giraffe">
 				<div>
 					<h2>Nairobi Bound: A Comprehensive Guide for Americans Starting a New Life in Kenya's Capital</h2>
-					<p class="teaser">When I moved to Kenya in February 2022, I had never been to Africa, and my closest friend lived two countries away. This is a collection of everything I wish I knew before I moved.</p>
+					<p class="teaser">When I moved to Kenya in February 2022, I had never been to Africa. This is a collection of everything I wish I knew before I moved.</p>
 				</div>
 			</article>
 		</a>
@@ -160,8 +160,8 @@
 			<article>
 				<img src="blog/gospels-relationship.jpg" title="By Relationship_between_synoptic_gospels.png: Alecmconroyderivative work: Popadius - This file was derived from  Relationship between synoptic gospels.png:, CC BY-SA 3.0, https://commons.wikimedia.org/w/index.php?curid=27903558" alt="Relationships between the synoptic gospels">
 				<div>
-					<h2>Gospel Authorship</h2>
-					<p class="teaser">None of the Gospels were likely written by someone who had met Jesus. This is my quest for a <i>sola-scriptura</i> understanding of what Jesus was like.</p>
+					<h2>Investigating the Origins of the Gospel Authors and Their Ties to Jesus</h2>
+					<p class="teaser">In the quest to understand the origins of the four canonical Gospels, a puzzling mystery emerges—none of the authors are confirmed to have personally met Jesus.</p>
 				</div>
 			</article>
 		</a>
