gospel title and grammar

--- a/blog.html
+++ b/blog.html
@@ -160,7 +160,7 @@
 			<article>
 				<img src="blog/gospels-relationship.jpg" title="By Relationship_between_synoptic_gospels.png: Alecmconroyderivative work: Popadius - This file was derived from  Relationship between synoptic gospels.png:, CC BY-SA 3.0, https://commons.wikimedia.org/w/index.php?curid=27903558" alt="Relationships between the synoptic gospels">
 				<div>
-					<h2>Investigating the Origins of the Gospel Authors and Their Ties to Jesus</h2>
+					<h2>Gospel Authorship</h2>
 					<p class="teaser">In the quest to understand the origins of the four canonical Gospels, a puzzling mystery emerges—none of the authors are confirmed to have personally met Jesus.</p>
 				</div>
 			</article>
