selected work renewvia labels

--- a/selected-work.html
+++ b/selected-work.html
@@ -43,7 +43,7 @@
 
 		<div id="selected-work-container">
 			<a class="project" aria-label="Kenya's Largest Solar Mini-Grid" href="kalobeyei.html">
-				<img src="selected-work/kalobeyei.jpg" alt="Environmentally sustainable cryptocurrency">
+				<img src="selected-work/kalobeyei.jpg" alt="Drone shot of a solar mini-grid">
 				<div class="proj-overlay">
 					<div class="hashtags">#solar #construction #project-management</div>
 					<h2>Kenya's Largest Solar Mini-Grid</h2>
@@ -53,7 +53,7 @@
 			<a class="project" aria-label="Blockchain-Based Carbon Assets" href="rrecs.html">
 				<img src="selected-work/rrecs.jpg" alt="Environmentally sustainable cryptocurrency">
 				<div class="proj-overlay">
-					<div class="hashtags">#cryptocurrency #sustainability</div>
+					<div class="hashtags">#blockchain #sustainability #carbon-markets</div>
 					<h2>Blockchain-Based Carbon Assets</h2>
 				</div>
 			</a>
