--- a/guide-to-kenya.html
+++ b/guide-to-kenya.html
@@ -136,9 +136,11 @@
 				<li><a rel="external" target="_blank" href="https://goo.gl/maps/FQcKdWPA3Ki7Xkwo8">K'Osewe Ranalo</a>: cafeteria-style Kenyan food in downtown with open-roof seating</li>
 				<li><a rel="external" target="_blank" href="https://goo.gl/maps/W9fDk5rGDx9fkFKs5">Chez Sonia</a>: fancy French restaurant with live music and garden seating</li>
 				<li><a rel="external" target="_blank" href="http://www.havana.co.ke/">Havana</a>: Mexican-Kenyan fusion with creative tacos</li>
-				<li><a rel="external" target="_blank" href="https://palletcafe.co.ke/">Pallet Cafe</a>: garden cafe</li>
+				<li><a rel="external" target="_blank" href="https://palletcafe.co.ke/">Pallet Cafe</a>: my favorite outdoor coworking cafe</li>
+				<li><a rel="external" target="_blank" href="https://goo.gl/maps/WAQCNQ3wVmoExBv76">Wasp & Sprout</a>: my favorite indoor coworking cafe</li>
 				<li><a rel="external" target="_blank" href="https://goo.gl/maps/aeuH6A6XGcEameQQ8">Chinatown</a></li>
 				<li><a rel="external" target="_blank" href="https://goo.gl/maps/NTZ3LAKrbhX81ncC9">Cultiva</a>: maybe the tastiest restaurant in Nairobi</li>
+				<li><a rel="external" target="_blank" href="https://goo.gl/maps/WwwJhTdNbiT8zCFF9">Yolo Ice Cream</a>: popular dessert hangout with massive portions</li>
 				<li>I eat lunch almost every day at a kibanda, or street food stall, down the street from my house. I get a mix of beans, cabbage, hot peppers, cut chapati, and sliced avocado with a cup of chai for about $1.</li>
 			</ul>
 
@@ -237,7 +239,7 @@
 				</table>
 			</div>
 
-			<p>"Mzuri" (good) and "poa" (cool) can be replaced by "salama" (peaceful). I rarely hear "Jambo" in casual settings. Coastal Kiswahili is a little more formal, so you might hear "Shikamoo" (I respect you) followed by "Marahaba" (I accept your respect) in formal settings or between a young person and someone older than them.</p>
+			<p>"Mzuri" (good) and "poa" (cool) can be replaced by "salama" (peaceful). "Jambo" is only common in Tanzanian and Coastal Kiswahili. Coastal Kiswahili is a little more formal, so you might hear "Shikamoo" (I respect you) followed by "Marahaba" (I accept your respect) in formal settings or between a young person and someone older than them.</p>
 
 			<p>If all of that seems overwhelming, the English "how are you" is always fine.</p>
 
@@ -331,7 +333,7 @@
 			<h3>How to Pay: Cash, Credit, and Mobile Money</h3>
 			<p>In Kenya, you can usually pay with a credit card as long as you're in a nice store, but cash and mobile money are more widely accepted.</p>
 
-			<p>"Mobile money," branded M-Pesa, is a system that grew out of organic use of phone credit, known here as "airtime," as currency in the earlier days of cell phone use in Africa. The telecommunications companies, or "telcos," especially Kenya's biggest one, Safaricom, formalized that system into something similar to, and often regulated like, a bank. Users can go to an agent and give them cash, and then their M-Pesa balance is correspondingly increased, just like depositing at a bank. There are three ways to pay send money to someone with M-Pesa, all accessible using USSD menus or the <a rel="external" target="_blank" href="https://www.safaricom.co.ke/index.php/personal/value-added-services/information-services/m-pesa-app">M-Pesa app</a>:</p>
+			<p>"Mobile money," branded M-Pesa, is a system that grew out of organic use of phone credit, known here as "airtime," as currency in the earlier days of cell phone use in Africa. The telecommunications companies, or "telcos," especially Kenya's biggest one, Safaricom, formalized that system into something similar to, and often regulated like, a bank. Users can go to an agent and give them cash, and then their M-Pesa balance is correspondingly increased, just like depositing at a bank. There are three ways to pay send money to someone with M-Pesa, all accessible using the *334# USSD menu or the <a rel="external" target="_blank" href="https://www.safaricom.co.ke/index.php/personal/value-added-services/information-services/m-pesa-app">M-Pesa app</a>:</p>
 			<ul>
 				<li><b>Send Money:</b> You can send money directly to another person knowing only their phone number.</li>
 				<li><b>Lipa na M-Pesa:</b> This means "pay with M-Pesa," intended for purchasing things from a business. There are two flavors. For a situation where the merchant doesn't care who you are, like a grocery store, you use the <b>Buy Goods</b> option and pay to a Till Number. For a situation where the merchant does care who you are and wants your payment to reflect on a specific account, you use the <b>Pay Bill</b> option, and then specify the Paybill Number and your Account Number. As an example, when a customer wants to pay Renewvia, they pay our Paybill Number and include the account number that we assign them.</li>
@@ -342,7 +344,7 @@
 
 			<p>To get M-Pesa, go to a Safaricom store building with your physical passport, not a soft copy, and pay $1 for a Safaricom SIM card. When you insert the SIM card into your phone, you will need to unlock it with a special, four-digit SIM PIN provided by Safaricom on the plastic case containing the SIM card. Doing so will install an app on your phone labeled "Safaricom" or "SIM Toolkit." That app will allow you to activate your M-Pesa account and, optionally, deactivate your SIM PIN so you don't have to enter it whenever you turn on your phone.</p>
 
-			<p>There are many apps that can send money from your U.S. accounts to your M-Pesa account. I use one called <a rel="external" target="_blank" href="https://www.sendwave.com/">Sendwave</a>, and there are a lot of people who use WorldRemit too. <a rel="author" target="_blank" href="mailto:nicholas.selby@renewvia.com">Send me an email</a> before you install Sendwave, and I'll send you an invitation link that will get us $10 each.</p>
+			<p>There are many apps that can send money from your U.S. accounts to your M-Pesa account. I use one called <a rel="external" target="_blank" href="https://www.sendwave.com/">Sendwave</a>, and there are a lot of people who use WorldRemit and Remitly, too. <a rel="author" target="_blank" href="mailto:nicholas.selby@renewvia.com">Send me an email</a> before you install Sendwave, and I'll send you an invitation link that will get us $10 each.</p>
 			
 			<h3>Taxes</h3>
 			<p>The following is not tax advice. This is just my understanding as an uneducated person.</p>
@@ -394,7 +396,7 @@
 			<p>Moving around in cities and large towns, you have a few options:</p>
 			<ul>
 				<li>Motorcycle taxis are absolutely everywhere, inlcuding villages. They're called <b>"boda boda"</b> in Kenya and surrounding countries, and will take you anywhere for a few dollars or sometimes less. You can always get one by walking out to a street and waving one over. You can agree on a price ahead of time or play it cool and agree on the price afterwards as a bargaining tool, like "I already know the price so you can't overcharge me." In any case, figuring out a fair price for the journey isn't always easy, especially when you're new, so I encourage over-paying at first, then slowly learning how cheap things can be instead of arguing about dollars or cents. For example, if a boda-boda driver wants to charge you 400 shillings and you really feel like it could be 100 shillings, that's wild overcharging, but it's also only $2.25.</li>
-				<li>Rideshare apps like <b>Uber</b>, and similar alternatives called <b>Bolt</b> and <b>Little</b>, work the same way as they do anywhere. They have different branding for their different tiers, but they essentially boil down to motorcycle taxis, small cars, medium cars, vans and SUVs, and women-only cars. Many foreigners prefer using rideshare apps instead of boda bodas for safety, both from crime and from traffic accidents. Personally, I ride boda bodas everywhere because it skips the traffic, but it certainly isn't as safe. Bolt and Little are usually cheaper than Uber, and they also give drivers a larger percentage of the trip price. Regardless of the app, you can choose to pay with card, cash, or M-Pesa, but sometimes drivers will only agree to take you if you pay with cash or M-Pesa because the apps won't give them immediate access to money they made with card payments.</li>
+				<li>Rideshare apps like <b>Uber</b>, and similar alternatives called <b>Bolt</b> and <b>Little</b>, work the same way as they do anywhere. They have different branding for their different tiers, but they essentially boil down to motorcycle taxis, small cars, medium cars, vans and SUVs, and women-only cars. Many foreigners prefer using rideshare apps instead of boda bodas for safety, both from crime and from traffic accidents. Personally, I ride boda bodas everywhere because it skips the traffic, but it isn't as safe. Bolt and Little are usually cheaper than Uber, and they also give drivers a larger percentage of the trip price. Regardless of the app, you can choose to pay with card, cash, or M-Pesa, but sometimes drivers will only agree to take you if you pay with cash or M-Pesa because the apps won't give them immediate access to money they made with card payments.</li>
 				<li>Minibusses, or "<b>matatus</b>" and "<b>SACCOs</b>," are 15-passenger vans driven by crazy people that go from everywhere to everywhere. It feels very chaotic and informal, so it's a hard system to figure out. So hard, in fact, that <a rel="external" target="_blank" href="https://news.mit.edu/2015/digital-matatus-project-makes-invisible-visible-0826">it took researchers from the University of Nairobi, Columbia, and MIT years to map the matatu transportation network</a>. If you do figure matatus out, riding in one will cost you almost nothing.</li>
 			</ul>
 
@@ -407,7 +409,7 @@
 				<li><b>Kenya Railways</b> is underrated. I use it to go back and forth to the coast. It's about $8 each way, but most folks don't like it because it's about the same speed as Amtrak and takes a few hours. That said, you'll likely see giraffes, impalas, and other cool creatures out the window along the way.</li>
 			</ul>
 
-			<h3>Jomo Kenyatta International Airport (NBO)</h3>
+			<h3>Jomo Kenyatta International Airport (abbreviated JKIA or NBO)</h3>
 			<p>When arriving at JKIA from abroad:</p>
 			<ol>
 				<li>At Customs, there will be lines for several different classes of entry: Kenyans, EAC residents, foreigners, diplomats, etc. The labels do not matter. Just go to the shortest line. If they try to make a big problem with your visa, go to the immigration office and pay $50.</li>
@@ -420,7 +422,7 @@
 				<li>About a kilometer before the airport, you will get out of your car to walk through a building to the right with a metal detector and x-ray machine. Leave your bags in the car. Usually, you don't need to empty your pockets or remove anything from your person when walking through the detector, but you may need to send your phone through the x-ray scanner. When the metal detector goes off, ignore it. The guards usually don't care. Just keep walking out of the building to your car and continue toward the airport.</li>
 				<li>After leaving your car, you will get in line to enter the airport. The guard at the entrance door will ask you which flight you are taking. Respond, "[Airline] to [destination]." Then, you will walk through a second metal detector and put your bags through an x-ray machine. You do not need to remove your laptop from your bag, empty your water, or remove your shoes. You will likely need to empty your pockets of any metal.</li>
 				<li>After checking in and dropping off your checked luggage, you will get in line for a passport check. As upon arrival, there will be lines for several different classes of entry: Kenyans, EAC residents, foreigners, diplomats, etc. The labels do not matter. Just go to the shortest line.</li>
-				<li>Finally, you will be at a normal airport security checkpoint. Everything is normal here with one pleasant exception: you don't need to empty your water bottle. If the guards ask you to, politely and quickly apologize and tell them you will drink it, then move on.</li>
+				<li>Finally, you will be at a normal airport security checkpoint. Everything is normal here with one pleasant exception: you don't need to empty your water bottle. If the guards ask you to empty it, politely and quickly apologize and tell them you will drink it, then move on.</li>
 				<li>Depending on your destination country, you may need to pass through a final mini-security checkpoint at your departure gate.</li>
 			</ol>
 		</section>
@@ -480,7 +482,7 @@
 			<p>If you like hiking, join a hiking club! Groups of people ride in matatus to mountains around the country to enjoy hiking together, and the leaders plan everything for you. Probably the most popular option is <a rel="external" target="_blank" href="https://www.outdoorer.co/">Outdoorer</a>, but ask around to be added to WhatsApp groups of other clubs. There are no subscription fees; hikes are all priced <i>à la carte</i>. Here is an incomplete list of my favorite day hikes:</p>
 			<ul>
 				<li><a rel="external" target="_blank" href="https://kws.go.ke/content/mount-longonot-national-park">Longonot</a>: For the best day hike in Kenya, hike up and around a dormant volcano crater for 360-degree views of Lake Naivasha and the Great Rift Valley.</li>
-				<li><a rel="external" target="_blank" href="https://en.wikipedia.org/wiki/Ngong_Hills">Ngong Hills</a>: Enjoy a peri-urban hike with views of Nairobi and Maasai land without needing to arrange transportation from Nairobi.</li>
+				<li><a rel="external" target="_blank" href="https://en.wikipedia.org/wiki/Ngong_Hills">Ngong Hills</a>: Enjoy a popular, peri-urban hike with views of Nairobi and Maasai land.</li>
 				<li><a rel="external" target="_blank" href="https://outdoorer.ke/all-events/trek-to-mackinders-mt-kenya-day-hike/?nskip=12658">Mackinders Quest</a>, Mount Kenya: Tackle a strenuous hike that covers half of the hardest mainstream route up Mount Kenya.</li>
 				<li><a rel="external" target="_blank" href="https://goo.gl/maps/9ZmUsigVHhBnGxTPA">Sleeping Warrior</a>: After circumnavigating the less-traveled crater, look at flamingos at nearby Lake Elementaita or hike the nearby Ugali Hills for an extra challenge. Hire local guides, bushmen of the Kenya Wildlife Service, to keep you safe from wild animals.</li>
 				<li><a rel="external" target="_blank" href="https://www.kws.go.ke/content/aberdare-national-park">Aberdares</a>: This range features many beautiful hikes with waterfalls.</li>
