--- a/guide-to-kenya.html
+++ b/guide-to-kenya.html
@@ -504,6 +504,15 @@
 			</ul>
 
 			<p>Note that, in some towns, rideshare apps have low adoption, so be prepared to pay extra for taxis.</p>
+
+			<h3>Recreational Substances</h3>
+			<p>Miraa, also known as khat, is a legal stimulant commonly used in East Africa. The leaves are typically chewed during casual social gatherings for their mild euphoric and stimulating effects. Tobacco, alcohol, and caffeine consumption are also common.</p>
+
+			<p>The use, possession, and distribution of most recreational drugs are illegal in Kenya. These substances are classified as controlled or illegal substances under Kenyan law, and being caught with them can lead to serious legal consequences, including imprisonment. I do not endorse or condone any illegal behavior.</p>
+
+			<p>If you decide to engage in recreational drug use, especially with synthetic substances like MDMA, it is crucial to use test kits. I've never heard of anyone having any problems with natural drugs like cannabis or psilocybin mushrooms, but synthetic drugs can vary widely in composition and purity levels. Unfortunately, I am unaware of any local sources for reagent test kits in Kenya. It may be advisable to acquire them from abroad and bring them with you when traveling.</p>
+
+			<p>Bush weed, locally cultivated cannabis, is readily available in Nairobi. It is often considered less expensive and of lower quality compared to imported strains. Many recreational drugs in Kenya are indeed imported. In Nairobi, you can easily come across a variety of cannabis, sometimes referred to as bhang or banga, as well as a few strains of psilocybin mushrooms and MDMA. More niche or specialized substances are generally harder to find.</p>
 		</section>
 
 		<section id="Safaris">
