Rm xmlns:cc and other W3C compliance
I gave up on CC answering my question about why their autogenerated license metadata isn't HTML compliant. See https://opensource.creativecommons.org/ccrel-guide/, but RDFa has problems with Google Fonts.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 				<article>
 					<img src="homepage/l3.jpg" alt="Illustration of the Learned Lifting Linearization algorithm">
 					<div class="desc">
-						<b><a rel="external" href="https://arxiv.org/abs/2104.02004" target="_blank">Learning of Causal Observable Functions for Koopman-DFL Lifting Linearization of Nonlinear Controlled Systems and Its Application to Excavation Automation</a></b><br>
+						<a rel="external" href="https://arxiv.org/abs/2104.02004" target="_blank"><h2>Learning of Causal Observable Functions for Koopman-DFL Lifting Linearization of Nonlinear Controlled Systems and Its Application to Excavation Automation</h2></a><br>
 						Nicholas Selby and Harry Asada<br>
 						<a rel="external" href="http://www.ieee-ras.org/publications/ra-l" target="_blank">IEEE Robotics and Automation Letters</a> 6 (4), 6297–6304, 2021<br>
 						<a href="homepage/l3.bib" aria-label="BibTeX for paper titled &quot;Learning of Causal Observable Functions for Koopman-DFL Lifting Linearization of Nonlinear Controlled Systems and Its Application to Excavation Automation&quot;" target="_blank">BibTeX</a>
@@ -83,7 +83,7 @@
 				<article>
 					<img src="homepage/teachbot.jpg" alt="Man interacting with a collaborative manufacturing robot">
 					<div class="desc">
-						<b><a rel="external" href="https://www.sciencedirect.com/science/article/pii/S2405844021016868" target="_blank">TeachBot: Towards Teaching Robotics Fundamentals for Human-Robot Collaboration at Work</a></b><br>
+						<a rel="external" href="https://www.sciencedirect.com/science/article/pii/S2405844021016868" target="_blank"><h2>TeachBot: Towards Teaching Robotics Fundamentals for Human-Robot Collaboration at Work</h2></a><br>
 						Nicholas Selby, Jerry Ng, Glenda S Stump, George Westerman, Claire Traweek, and Harry Asada<br>
 						<a rel="external" href="https://www.sciencedirect.com/journal/heliyon" target="_blank">Heliyon</a> 7 (7), e07583, 2021<br>
 						<a href="homepage/teachbot.bib" aria-label="BibTeX for paper titled &quot;TeachBot: Towards Teaching Robotics Fundamentals for Human-Robot Collaboration at Work&quot;" target="_blank">BibTeX</a>
@@ -95,7 +95,7 @@
 				<article>
 					<img src="homepage/rfind.jpg" alt="Messy room as seen by a computer vision system with 'Hidden Items' identified">
 					<div class="desc">
-						<b><a href="homepage/rfind.pdf" download target="_blank">Minding the Billions: Ultra-wideband Localization in Deployed RFID Tags</a></b><br>
+						<a href="homepage/rfind.pdf" download target="_blank"><h2>Minding the Billions: Ultra-wideband Localization in Deployed RFID Tags</h2></a><br>
 						Yunfei Ma, Nicholas Selby, and Fadel Adib<br>
 						<a rel="external" href="https://sigmobile.org/mobicom/2017/" target="_blank">International Conference on Mobile Computing and Networking</a>, Snowbird, UT, USA, 2017<br>
 						<a href="homepage/rfind.bib" aria-label="BibTeX for paper titled &quot;Minding the Billions: Ultra-wideband Localization in Deployed RFID Tags&quot;" target="_blank">BibTeX</a>
@@ -107,7 +107,7 @@
 				<article>
 					<img src="homepage/rfly.jpg" title="CC BY-4.0. Credit: MIT Media Lab/Fadel Adib and Jimmy Day" alt="Drone with a mounted PCB">
 					<div class="desc">
-						<b><a href="homepage/rfly.pdf" download target="_blank">Drone Relays for Battery-Free Networks</a></b><br>
+						<a href="homepage/rfly.pdf" download target="_blank"><h2>Relays for Battery-Free Networks</h2></a><br>
 						Yunfei Ma, Nicholas Selby, and Fadel Adib<br>
 						<a rel="external" href="http://conferences.sigcomm.org/sigcomm/2017/" target="_blank">ACM Conference on Applications, Technologies, Architectures, and Protocols for Computer Communication</a>, Los Angeles, CA, USA, 2017<br>
 						<a href="homepage/rfly.bib" aria-label="BibTeX for paper titled &quot;Drone Relays for Battery-Free Networks&quot;" target="_blank">BibTeX</a>
@@ -119,7 +119,7 @@
 				<article>
 					<img src="homepage/xducer.jpg" alt="Surface plot of an acoustic wave propagating through aluminum">
 					<div class="desc">
-						<b><a href="homepage/xducer.pdf" download target="_blank">Determination of Absolute Material Nonlinearity with Air-Coupled Ultrasonic Receivers</a></b><br>
+						<a href="homepage/xducer.pdf" download target="_blank"><h2>Determination of Absolute Material Nonlinearity with Air-Coupled Ultrasonic Receivers</h2></a><br>
 						David Torello, Nicholas Selby, Jin-Yeon Kim, Jianmin Qu, and Laurence J. Jacobs<br>
 						<a rel="external" href="https://www.journals.elsevier.com/ultrasonics" target="_blank">Ultrasonics</a> 81, 107–117, 2017<br>
 						<a href="homepage/xducer.bib" aria-label="BibTeX for paper titled &quot;Determination of Absolute Material Nonlinearity with Air-Coupled Ultrasonic Receivers&quot;" target="_blank">BibTeX</a>
@@ -131,7 +131,7 @@
 				<article>
 					<img src="homepage/dualaxis.jpg" alt="Custom tool to measure the fractional quantum Hall effect">
 					<div class="desc">
-						<b><a href="homepage/dualaxis.pdf" download target="_blank"><i>In Situ</i> Biaxial Rotation at Low-Temperatures in High Magnetic Fields</a></b><br>
+						<a href="homepage/dualaxis.pdf" download target="_blank"><h2><i>In Situ</i> Biaxial Rotation at Low-Temperatures in High Magnetic Fields</h2></a><br>
 						Nicholas Selby, Matthew Crawford, Lisa Tracy, John L. Reno, and Wei Pan<br>
 						<a rel="external" href="https://aip.scitation.org/journal/rsi" target="_blank">Review of Scientific Instruments</a> 85 (9), 095116, 2014<br>
 						<a href="homepage/dualaxis.bib" aria-label="BibTeX for paper titled &quot;In Situ Biaxial Rotation at Low-Temperatures in High Magnetic Fields&quot;" target="_blank">BibTeX</a>
@@ -150,7 +150,7 @@
 				<article>
 					<img src="homepage/patent-rfind.jpg" alt="Patent figure of the RFind algorithm">
 					<div class="desc">
-						<b>Methods and Apparatus for Wideband Localization</b><br>
+						<h2>Methods and Apparatus for Wideband Localization</h2><br>
 						Zhihong Luo, Qiping Zhang, Nicholas Selby, Yunfei Ma, Manish Singh, and Fadel Adib<br>
 						U.S. Patent Nos. <a rel="external" href="https://patents.google.com/patent/US10575277B2/" target="_blank" aria-label="Patent #10,575,277">10,575,277</a>, <a href="https://patents.google.com/patent/US10921419B2/" target="_blank" aria-label="Patent #10,921,419">10,921,419</a>, <a rel="external" href="https://patents.google.com/patent/US10701662B2/" target="_blank" aria-label="Patent #10,701,662">10,701,662</a>, and <a rel="external" href="https://patents.google.com/patent/US11604250B2/" target="_blank" aria-label="Patent #11,604,250">11,604,250</a><br>
 						Published 2020–2023
@@ -162,7 +162,7 @@
 				<article>
 					<img src="homepage/patent-rfly.jpg" alt="Patent figure of the RFly drone">
 					<div class="desc">
-						<b>Full-Duplex, Bi-Directional, Analog Relay</b><br>
+						<h2>Full-Duplex, Bi-Directional, Analog Relay</h2><br>
 						Yunfei Ma, Nicholas Selby, and Fadel Adib<br>
 						U.S. Patent No. <a rel="external" href="https://patents.google.com/patent/US10389429B2/" target="_blank" aria-label="Patent #10,389,429">10,389,429</a><br>
 						Published 2019
@@ -203,7 +203,7 @@
 				<article>
 					<img src="homepage/2160.jpg" title="NASA/JPL/Cornell University, Maas Digital LLC" alt="Mars rover">
 					<div class="desc">
-						<b>Identification, Estimation, and Learning</b><br>
+						<h2>Identification, Estimation, and Learning</h2><br>
 						<i>Massachusetts Institute of Technology</i>, <a aria-label="Syllabus for course titled &quot;Identification, Estimation, and Learning&quot;" rel="external" href="https://ocw.mit.edu/courses/mechanical-engineering/2-160-identification-estimation-and-learning-spring-2006/" target="_blank">2.160</a>, <i>Fall 2019</i><br>
 						Key Concepts: machine learning, Kalman filters, system identification<br>
 						Median Student Evaluation: 7/7
@@ -215,7 +215,7 @@
 				<article>
 					<img src="homepage/2140.jpg" title="Ti Consiglio un Lavoro" alt="Students interacting with a circuit and oscilloscope">
 					<div class="desc">
-						<b>Analysis and Design of Feedback Control Systems</b><br>
+						<h2>Analysis and Design of Feedback Control Systems</h2><br>
 						<i>Massachusetts Institute of Technology</i>, <a aria-label="Syllabus for course titled &quot;Analysis and Design of Feedback Control Systems&quot;" rel="external" href="https://ocw.mit.edu/courses/mechanical-engineering/2-14-analysis-and-design-of-feedback-control-systems-spring-2014/" target="_blank">2.140</a>, <i>Spring 2017</i><br>
 						Key Concepts: time and frequency domain analysis, root locus and loop shaping, stability, nonlinearity, digital systems<br>
 						Median Student Evaluation: 7/7
@@ -227,7 +227,7 @@
 				<article>
 					<img src="homepage/cs1371.jpg" title="GTW" alt="Computer showing code in a text editor">
 					<div class="desc">
-						<b>Computer Science for Engineers</b><br>
+						<h2>Computer Science for Engineers</h2><br>
 						<i>Georgia Institute of Technology</i>, <a aria-label="Syllabus for course titled &quot;Computer Science for Engineers&quot;" rel="external" href="https://www.cc.gatech.edu/fac/David.Smith/CS1371_2018_Fall_Syllabus.pdf" target="_blank">CS 1371</a>, <i>Spring 2013–Spring 2016</i><br>
 						Key Concepts: MATLAB, computing fundamentals, algorithms<br>
 						Median Student Evaluation: 5/5
@@ -239,7 +239,7 @@
 				<article>
 					<img src="homepage/phys2211.jpg" title="NASA/JPL-Caltech" alt="Galaxies bending spacetime">
 					<div class="desc">
-						<b>Introductory Physics</b><br>
+						<h2>Introductory Physics</h2><br>
 						<i>Georgia Institute of Technology</i>, <a aria-label="Syllabus for course titled &quot;Introductory Physics&quot;" rel="external" href="http://www.introphys.gatech.edu/2017/Spring/2211/Schedule/schedule.html" target="_blank">PHYS 2211</a>, <i>Spring 2014</i><br>
 						Key Concepts: calculus-based classical mechanics, oscillations, waves<br>
 						Median Student Evaluation: 5/5
@@ -290,7 +290,7 @@
 	</main>
 
 	<footer>
-		<a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png"></a><br />© 2018–2023 This work by <a xmlns:cc="http://creativecommons.org/ns#" href="https://rupumped.github.io" property="cc:attributionName" rel="cc:attributionURL">Nicholas S. Selby</a> is licensed under a <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.<br>Feel free to fork the <a rel="external" target="_blank" href="https://github.com/rupumped/rupumped.github.io">source code</a> from GitHub and create your own website using this template.
+		<a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png"></a><br>© 2018–2023 This work by <a href="https://rupumped.github.io" property="cc:attributionName" rel="cc:attributionURL">Nicholas S. Selby</a> is licensed under a <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.<br>Feel free to fork the <a rel="external" target="_blank" href="https://github.com/rupumped/rupumped.github.io">source code</a> from GitHub and create your own website using this template.
 	</footer>
 </body>
 </html>
