--- a/service.html
+++ b/service.html
@@ -58,7 +58,7 @@
 				<img src="service/presentation-2.jpg" id="img-presentation-2" alt="Student giving a presentation on air pollution with colorful graphics">
 				<img src="service/group-0.jpg" id="img-group-0" alt="Large group of students and instructors">
 				<img src="service/group-1.jpg" id="img-group-1" alt="My class">
-				<img class="img-full-width" id="main-img" alt="Me teaching a class using a projector">
+				<img src="service/teaching-2.jpg" class="img-full-width" id="main-img" alt="Me teaching a class using a projector">
 			</div>
 
 			<p>Clubes de Ciencia México (CdeCMx) is a non-profit organization that seeks to encourage Mexican students to pursue professional careers in STEM. I volunteer in the summers as an instructor with CdeCMx to teach high school and college students in Mérida how to design, prototype, and deploy custom devices to monitor public health in a city. I partner with a local co-instructor, Rodrigo Gamboa Torres, to construct a curriculum for and teach a week-long class titled "Citizen Science: Monitoring Public Health in Your City."</p>
@@ -72,7 +72,7 @@
 	</main>
 
 	<footer>
-		<a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png"></a><br />© 2018–2023 This work by <a xmlns:cc="http://creativecommons.org/ns#" href="https://rupumped.github.io" property="cc:attributionName" rel="cc:attributionURL">Nicholas S. Selby</a> is licensed under a <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.<br>Feel free to fork the <a rel="external" target="_blank" href="https://github.com/rupumped/rupumped.github.io">source code</a> from GitHub and create your own website using this template.
+		<a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png"></a><br>© 2018–2023 This work by <a href="https://rupumped.github.io" property="cc:attributionName" rel="cc:attributionURL">Nicholas S. Selby</a> is licensed under a <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.<br>Feel free to fork the <a rel="external" target="_blank" href="https://github.com/rupumped/rupumped.github.io">source code</a> from GitHub and create your own website using this template.
 	</footer>
 </body>
 </html>
