--- a/capstone.html
+++ b/capstone.html
@@ -91,12 +91,12 @@
 			<img src="project-pages/capstone-gal6.jpg" id="img-capstone-gal6" alt="Multiple people working on computer code">
 			<img src="project-pages/capstone-gal7.jpg" id="img-capstone-gal7" alt="Quadcopter being piloted">
 			<img src="project-pages/capstone-gal8.jpg" id="img-capstone-gal8" alt="Computer running code">
-			<img class="img-full-width" id="main-img" alt="A drone piloted by one of three men in a field">
+			<img src="project-pages/capstone-action.jpg" class="img-full-width" id="main-img" alt="A drone piloted by one of three men in a field">
 		</div>
 	</main>
 
 	<footer>
-		<a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png"></a><br />© 2018–2023 This work by <a xmlns:cc="http://creativecommons.org/ns#" href="https://rupumped.github.io" property="cc:attributionName" rel="cc:attributionURL">Nicholas S. Selby</a> is licensed under a <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.<br>Feel free to fork the <a rel="external" target="_blank" href="https://github.com/rupumped/rupumped.github.io">source code</a> from GitHub and create your own website using this template.
+		<a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png"></a><br>© 2018–2023 This work by <a href="https://rupumped.github.io" property="cc:attributionName" rel="cc:attributionURL">Nicholas S. Selby</a> is licensed under a <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.<br>Feel free to fork the <a rel="external" target="_blank" href="https://github.com/rupumped/rupumped.github.io">source code</a> from GitHub and create your own website using this template.
 	</footer>
 </body>
 </html>
