fix broken link

--- a/guide-to-kenya.html
+++ b/guide-to-kenya.html
@@ -500,7 +500,7 @@
 			<ul>
 				<li><a rel="external" target="_blank" href="https://kws.go.ke/content/mount-longonot-national-park">Longonot</a>: For the best day hike in Kenya, hike up and around a dormant volcano crater for 360-degree views of Lake Naivasha and the Great Rift Valley.</li>
 				<li><a rel="external" target="_blank" href="https://en.wikipedia.org/wiki/Ngong_Hills">Ngong Hills</a>: Enjoy a popular, peri-urban hike with views of Nairobi and Maasai land.</li>
-				<li><a rel="external" target="_blank" href="https://outdoorer.ke/all-events/trek-to-mackinders-mt-kenya-day-hike/?nskip=12658">Mackinders Quest</a>, Mount Kenya: Tackle a strenuous hike that covers half of the hardest mainstream route up Mount Kenya.</li>
+				<li><a rel="external" target="_blank" href="https://africanspicesafaris.com/tour/mackinders-hut-mount-kenya-climbing-accommodation/">Mackinders Quest</a>, Mount Kenya: Tackle a strenuous hike that covers half of the hardest mainstream route up Mount Kenya.</li>
 				<li><a rel="external" target="_blank" href="https://goo.gl/maps/9ZmUsigVHhBnGxTPA">Sleeping Warrior</a>: After circumnavigating the less-traveled crater, look at flamingos at nearby Lake Elementaita or hike the nearby Ugali Hills for an extra challenge. Hire local guides, bushmen of the Kenya Wildlife Service, to keep you safe from wild animals.</li>
 				<li><a rel="external" target="_blank" href="https://www.kws.go.ke/content/aberdare-national-park">Aberdares</a>: This range features many beautiful hikes with waterfalls.</li>
 				<li><a rel="external" target="_blank" href="https://www.kws.go.ke/content/hells-gate-national-park">Hell's Gate</a>: This national park has places to hike, bike, and swim.</li>
