rfind and rfly canonical
Google Search Console reported my two SK papers as "duplicate without user-selected canonical," so I changed the hrefs to Fadel's.

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 				<article>
 					<img src="homepage/rfind.jpg" alt="Messy room as seen by a computer vision system with 'Hidden Items' identified">
 					<div class="desc">
-						<a href="homepage/rfind.pdf" download target="_blank"><h2>Minding the Billions: Ultra-wideband Localization in Deployed RFID Tags</h2></a><br>
+						<a rel="external" href="http://www.mit.edu/~fadel/papers/RFind-paper.pdf" download target="_blank"><h2>Minding the Billions: Ultra-wideband Localization in Deployed RFID Tags</h2></a><br>
 						Yunfei Ma, Nicholas Selby, and Fadel Adib<br>
 						<a rel="external" href="https://sigmobile.org/mobicom/2017/" target="_blank">International Conference on Mobile Computing and Networking</a>, Snowbird, UT, USA, 2017<br>
 						<a href="homepage/rfind.bib" aria-label="BibTeX for paper titled &quot;Minding the Billions: Ultra-wideband Localization in Deployed RFID Tags&quot;" target="_blank">BibTeX</a>
@@ -107,7 +107,7 @@
 				<article>
 					<img src="homepage/rfly.jpg" title="CC BY-4.0. Credit: MIT Media Lab/Fadel Adib and Jimmy Day" alt="Drone with a mounted PCB">
 					<div class="desc">
-						<a href="homepage/rfly.pdf" download target="_blank"><h2>Relays for Battery-Free Networks</h2></a><br>
+						<a rel="external" href="http://www.mit.edu/~fadel/papers/RFly-paper.pdf" download target="_blank"><h2>Relays for Battery-Free Networks</h2></a><br>
 						Yunfei Ma, Nicholas Selby, and Fadel Adib<br>
 						<a rel="external" href="http://conferences.sigcomm.org/sigcomm/2017/" target="_blank">ACM Conference on Applications, Technologies, Architectures, and Protocols for Computer Communication</a>, Los Angeles, CA, USA, 2017<br>
 						<a href="homepage/rfly.bib" aria-label="BibTeX for paper titled &quot;Drone Relays for Battery-Free Networks&quot;" target="_blank">BibTeX</a>
