--- a/rfind.html
+++ b/rfind.html
@@ -74,7 +74,7 @@
 
 		<p>Our key innovation is a new technique called two-frequency excitation. The technique uses one frequency to power up the battery-free sticker and uses the other frequency for pinpointing the exact location. Our technology is fully compliant with the FCC standards and the communication standard for billions of few-cent wireless stickers in today's world.</p>
 
-		<p>To learn more about the technology, <a href="homepage/rfind.pdf" download>read our paper!</a></p>
+		<p>To learn more about the technology, <a rel="external" href="http://www.mit.edu/~fadel/papers/RFind-paper.pdf" download target="_blank">read our paper!</a></p>
 	</main>
 
 	<footer>
