--- a/rfly.html
+++ b/rfly.html
@@ -74,7 +74,7 @@
 
 		<p>The key innovation in designing RFly is a new relay that enables cataloging and locating battery-free RFIDs over a wide area. Specifically, due to their battery-free nature, RFIDs are crippled by their communication range. RFly's relay can seamlessly integrate with an existing RFID infrastructure and extend the coverage area of every reader by a 100x. Moreover, RFly's location-finding algorithm collects wireless responses from every RFID along its flight path, then combines these responses to pinpoint the RFID's location, achieving an accuracy of around a foot. These capabilities enable RFly to scan for objects over a wide area and pinpoint their location to the actual shelf they are placed on.</p>
 
-		<p>To learn more about RFly, <a href="homepage/rfly.pdf" download>read our paper!</a></p>
+		<p>To learn more about RFly, <a rel="external" href="http://www.mit.edu/~fadel/papers/RFly-paper.pdf" download target="_blank">read our paper!</a></p>
 	</main>
 
 	<footer>
